Add Swagger annotations to personnel controller and update swagger.json file
